[package]
name = "envoy-rbi-filter"
version = "0.1.0"
authors = ["Martijn Swaagman <martijn@swaagman.online>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever="0.25.1"
string_cache="0.8.1"
proxy-wasm = "0.1.2"
log="0.4.11"