[package]
name = "envoy-rbi-filter"
description = "Envoy Response Body Injection Filter"
version = "0.2.0"
authors = ["Martijn Swaagman <martijn@swaagman.online>"]
edition = "2021"
license = "MIT"
keywords = ["envoy", "response", "body", "injection"]
exclude = [
  ".github",
  "example"
]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2.0"
serde_json = "1.0.78"
log="0.4.14"

[dev-dependencies]
reqwest = "0.11.9"
tokio = { version = "1.17.0", features = ["macros"] }